# Medprompt

./: Integrated.ipynb  README.md  Zero_shot_dspy.ipynb  medprompt.py  pyproject.toml  requirements.txt
notebooks/: Zero_shot_dspy.ipynb
