[tool.poetry]
name = "medprompt"
version = "0.1.0"
description = "Optimizable implementation of Medprompt"
authors = ["Daksh Jain"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
openai = "^1.7.2"
faiss-cpu = "^1.7.4"
tqdm = "^4.66.1"
joblib = "^1.3.2"

[tool.poetry.scripts]
medprompt="medprompt.medprompt"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
